CV crash course project ready for deployment

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/ai-camp-logo-128x128.png')}}" type="image/x-icon">
     <meta name="description" content="">
 
-    <title>results</title>
+    <title>Result</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='plugins/fontawesome/css/all.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
@@ -17,11 +17,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top header-white main-nav navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="/#">
+            <a class="navbar-brand" href="https://www.ai-camp.org/">
                 <img src="{{ url_for('static', filename='images1/ai camp logo1.svg')}}" width="55" height="55" alt="">
               </a>
-            <a class="navbar-brand " href="/#">
-                <h3 class="colored-text">Emotion Detector</h3>
+            <a class="navbar-brand " href="{{ url_for('home') }}">
+                <h3 class="colored-text">Ocean Trash Detector</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,33 +37,33 @@
                                 Links
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarWelcome">
-                                 <a class="dropdown-item " target="_blank" href="https://github.com/zikegcwk/aicamp_emotion">
+                                 <a class="dropdown-item " target="_blank" href="https://github.com/akaprasanga/ocean_trash_detection">
                                     Github Repo
                                 </a>
-                                <a class="dropdown-item " target="_blank" href="https://medium.com/@beatrice.miha/i-learned-how-to-learn-dive-into-the-deepest-ocean-3add9449eb7e">
+                               <!-- <a class="dropdown-item " target="_blank" href="https://medium.com/@beatrice.miha/i-learned-how-to-learn-dive-into-the-deepest-ocean-3add9449eb7e">
                                     Beatrice's Post
                                 </a> 
                                 <a class="dropdown-item " target="_blank" href="https://medium.com/@thomaschen395/how-ai-camp-prepared-me-for-the-real-world-7f2a8c28cde5">
                                     Thomas's Post
-                                </a>
+                                </a> -->
                         </li>
                         <li class="nav-item ">
-                            <a href="/#home" class="nav-link colored-text">
+                            <a href="{{ url_for('home') }}" class="nav-link colored-text">
                                 Home
                             </a>
                         </li>
-                        <li class="nav-item ">
+                        <!-- <li class="nav-item ">
                             <a href="/#demo" class="nav-link colored-text">
                                 Demo
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item ">
-                            <a href="/#meet_the_team" class="nav-link colored-text">
+                            <a href="{{ url_for('home') }}/#meet_the_team" class="nav-link colored-text">
                                 The Team
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="/#our_work" class="nav-link colored-text">
+                            <a href="{{ url_for('home') }}/#our_work" class="nav-link colored-text">
                                 Our Work
                             </a>
                         </li>
@@ -110,14 +110,14 @@
                     <h3 class="section-title display-4 results-title">Why do we miss sometimes?</h3>
 
                     <div class="lead">
-                        <p class="section-text results-text">Given just three weeks, we only had time to train our model with 5 emotions on about 6.7k labeled data. If we have more time, we can improve our model performance!&nbsp;</p>
+                        <p class="section-text results-text">This project is created for a learning purpose. This model is just trained with just around 200 images. So, we might miss some trash in the image.&nbsp;</p>
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-lg-6">
+                <!-- <div class="col-sm-12 col-lg-6">
                     <img class="mbr-figure-graph" src="{{ url_for('static', filename='images/clem-5-emo-ncm-671x690.jpg')}}">
                 </div>
-            </div>
+            </div> -->
     </section>
 
     <footer id="footer">
