--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -854,7 +854,7 @@ PAGE BANNER
 
 #banner-4 {
 	position: relative;
-	background: url("../images1/surprisedbaby.jpeg") no-repeat;
+	background: url("../images1/oceana_plastic.jpg") no-repeat;
 	background-size: cover;
 }
 
