--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,11 +6,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="it">
-  <meta name="keywords" content="AI, Emotion Detector, AI Project, Deep Learning">
+  <meta name="keywords" content="AI, Ocean Trash Detector, AI Project, Deep Learning">
   
   <meta name="author" content="">
 
-  <title>Emotion Detector</title>
+  <title>Ocean Trash Detector</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/plugins/fontawesome/css/all.css">
 
@@ -34,11 +34,11 @@
         
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top site-navigation main-nav navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://www.ai-camp.org/">
                 <img src="{{ url_for('static', filename='images1/ai camp logo1.svg')}}" width="55" height="55" alt="">
               </a>
             <a class="navbar-brand" href="#">
-                <h3>Emotion Detector</h3>
+                <h3>Ocean Trash Detector</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,14 +54,8 @@
                                 Links
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarWelcome">
-                                 <a class="dropdown-item " target="_blank" href="https://github.com/zikegcwk/aicamp_emotion">
+                                 <a class="dropdown-item " target="_blank" href="https://github.com/akaprasanga/ocean_trash_detection">
                                     Github Repo
-                                </a>
-                                <a class="dropdown-item " target="_blank" href="https://medium.com/@beatrice.miha/i-learned-how-to-learn-dive-into-the-deepest-ocean-3add9449eb7e">
-                                    Beatrice's Post
-                                </a> 
-                                <a class="dropdown-item " target="_blank" href="https://medium.com/@thomaschen395/how-ai-camp-prepared-me-for-the-real-world-7f2a8c28cde5">
-                                    Thomas's Post
                                 </a>
                         </li>
                         <li class="nav-item ">
@@ -69,11 +63,11 @@
                                 Home
                             </a>
                         </li>
-                        <li class="nav-item ">
+                        <!-- <li class="nav-item ">
                             <a href="#demo" class="nav-link">
                                 Demo
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item ">
                             <a href="#meet_the_team" class="nav-link">
                                 The Team
@@ -103,13 +97,12 @@
                    <div class="banner-content2 text-center style-2">
                         <!-- Heading -->
                         <h1 class="display-4 mb-4 ">
-                            AI Emotion Recognition
+                            AI BASED OCEAN TRASH DETECTION
                         </h1>
 
                         <!-- Subheading -->
                         <p class="lead mb-5 pr-0">
-                            Created with love from AI Camp @ Stanford StartX.<br>
-An AI project made by high school students.
+                            Lets make our oceans clean!  
                         </p>
 
                         <!-- Button -->
@@ -118,7 +111,7 @@ An AI project made by high school students.
                                     <input id="seefood_input_field" name="file" type="file" onchange="this.form.submit();" hidden/>
                                 </form>
                                 <button href="#" target="_blank" class="btn btn-white btn-circled btn-text">
-                                    <i class="fas fa-camera pr-2 left" aria-hidden="true"></i> Click to see emotion
+                                    <i class="fas fa-camera pr-2 left" aria-hidden="true"></i> Click to detect trash in ocean images
                                 </button>
                             </a>
                         </div>
@@ -131,19 +124,19 @@ An AI project made by high school students.
     <section>
           <div class = "row no-gutters">
               <div class = "col">
-                  <img src="{{ url_for('static', filename='images1/happy-450x450-450x450.png')}}" class="img-fluid"/>
+                  <img src="{{ url_for('static', filename='images1/bottle.JPG')}}" class="img-fluid"/>
               </div>
               <div class = "col">
-                <img src="{{ url_for('static', filename='images1/neutral.png')}}" class="img-fluid"/>
+                <img src="{{ url_for('static', filename='images1/pastic bag.JPG')}}" class="img-fluid"/>
             </div>
             <div class = "col">
-                <img src="{{ url_for('static', filename='images1/sad.png')}}" class="img-fluid"/>
+                <img src="{{ url_for('static', filename='images1/can.JPG')}}" class="img-fluid"/>
             </div>
             <div class = "col">
-                <img src="{{ url_for('static', filename='images1/suprised.png')}}" class="img-fluid"/>
+                <img src="{{ url_for('static', filename='images1/waste.JPG')}}" class="img-fluid"/>
             </div>
           </div>
-    </section>
+    <!-- </section>
     <a id="demo"></a>
     <section class="section">
         <div class="row align-items-center justify-content-center">
@@ -157,7 +150,7 @@ An AI project made by high school students.
                 <p class="small-text top-margin"> This is an initial prototype of our detection model where we only tested two emotions: happy and neutral. Since then, our model can predict happy, neutral, surprised, and angry very well!  </p>
             </div>
         </div>
-    </section>
+    </section> -->
 
 <a id="meet_the_team"></a>
 <section class="section section-padding" id="services-2">
@@ -176,72 +169,66 @@ An AI project made by high school students.
             <div class="row justify-content-center text-center">
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
-                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/beatrice.jpeg')}}">
-                        <h3>Beatrice Mihalache</h3>
-                        <p>Student at Los Gatos High School</p>
-                        <p>Beatrice enjoys the quick-paced learning style of AI Camp. She contributed to our data extraction and website frontend.</p>
+                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/a.png')}}">
+                        <h3>Alex Duffy</h3>
+                        <p>AI Camp</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
-                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/ary.jpeg')}}">
-                        <h3>Aryansh Chikkere</h3>
-                        <p>Student at American High School</p>
-                        <p>Ari enjoys studying Physics and improving code. He built the initial backend of this website.</p>
+                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/m_purple.png')}}">
+                        <h3>Mitch Cutts</h3>
+                        <p>AI Camp</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
-                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/thomas.jpeg')}}">
-                        <h3>Thomas Chen</h3>
-                        <p>Student at Irvington High School</p>
-                        <p>Thomas enjoys experimenting with code. He created a script to retrieve data from Bing and wrote the website HTML.</p>
+                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/m_teal.png')}}">
+                        <h3>Michael Ke Zhang</h3>
+                        <p>AI Camp</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
                     <div class="web-service-block">
-                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/clement.jpeg')}}">
-                        <h3>Clement Ou</h3>
-                        <p>Student at Gunn High School</p>
-                        <p>Clement enjoys writing scripts and coding. He trained a neural network by using a deep learning instance in AWS.</p>
+                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/j.png')}}">
+                        <h3>Jackson Choyce</h3>
+                        <p>AI Camp</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
                     <div class="web-service-block">
-                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/muti.jpeg')}}">
-                        <h3>Muti Shuman</h3>
-                        <p>Student at Junipero Serra High School</p>
-                        <p>Muti enjoys playing basketball. He built scripts to capture data using OpenCV and prepared data for training.</p>
+                        <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/r.png')}}">
+                        <h3>Richard Hsu</h3>
+                        <p>AI Camp</p>
                     </div>
                 </div>
             </div>
-                <div class="row justify-content-center">
+               <!-- <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 text-center">
                         <div class="section-heading">
-                            <!-- Heading -->
                             <h2 class="section-title section-text">
                                 Our Intructors
                             </h2>
                         </div>
                     </div>
-                </div> <!-- / .row -->
+                </div>  -->
     
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-sm-6 col-md-6">
                         <div class="web-service-block">
-                            <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/michael.jpeg')}}">
-                            <h3>Michael Ke Zhang</h3>
-                            <p>Stanford Ph.D</p>
-                            <p>Michael ran data teams at Blend Labs and Grab. He enjoys fishing and inspiring the next generation of students.</p>
+                            <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/c.png')}}">
+                            <h3>Cameron Jackson</h3>
+                            <p>AI Camp</p>
+
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-md-6">
                         <div class="web-service-block">
-                            <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/ying.jpeg')}}">
-                            <h3>Ying Jiang</h3>
-                            <p>Stanford Ph.D</p>
-                            <p>Ying is a Lead Data Scientist at Ericsson. She is passionate in education, data analysis, and continuous learning.</p>
+                            <img class="image-container img-fluid" src="{{ url_for('static', filename='images1/p.png')}}">
+                            <h3>Prasanga Neupane</h3>
+                            <p>Data Science Intern</p>
+
                         </div>
                     </div>
                 </div>
